--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "github:fortawesome/react-fontawesome",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/root": "github:react-native-async-storage/async-storage",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "axios": "^1.7.9",
     "expo": "^52.0.15",
     "expo-status-bar": "~2.0.0",
+    "link": "^2.1.1",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.3",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.10.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.5",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
